<resources>
    <string name="app_name">"Prueba Técnica "</string>
    <string name="seleccionarIdioma">Selecciona tu idioma / Select your language</string>
    <string name="espanol">Español</string>
    <string name="ingles">English</string>
    <string name="idBusqueda">Introduce la ID a buscar</string>
    <string name="textoVacio">No has introducido ID</string>
    <string name="errorDescarga">Fallo en la descarga de datos</string>
    <string name="usuarioNoEncontrado">Usuario no encontrado</string>
    <string name="falloBorrar">No se ha podido borrar</string>
    <string name="okBorrar">El registro se ha borrado</string>
    <string name="filtrarPorIdNombre">Introduce la ID o nombre para filtrar</string>
    <string name="conexionIncorrecta">Fallo en la descarga de datos</string>
    <string name="nombreCrearNuevo">Introduce nuevo nombre</string>
    <string name="botonFecha">Fecha</string>
    <string name="botonHora">Hora</string>
    <string name="camposIncompletos">Faltan campos por completar</string>
    <string name="errorCrearUsuario">Error al crear el usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardarCambios">Guardar</string>
    <string name="editarUsuario">Editar usuario</string>
    <string name="okModificar">El registro se ha modificado</string>
    <string name="errorModificar">El registro no se ha podido modificar</string>
    <string-array
        name="string_array_titulos_tabs">
        <item>Listado</item>
        <item>Buscar</item>
        <item>Crear nuevo</item>
    </string-array>

</resources>
