<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height= "wrap_content"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarUsuario"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <View android:id="@+id/titleDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombreEditTextDialog"
            android:textColor="@color/black"
            android:textSize="15sp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fechaEditTextDialog"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/horaEditTextDialog"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/buttonGuardarDialog"
            android:textColor="@color/white"
            android:background="@color/green"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/guardarCambios" />

        <Button
            android:id="@+id/buttonCancelarDialog"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/grey"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/cancelar" />



    </LinearLayout>



</LinearLayout>