<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreCrearNuevo"
            android:id="@+id/nombreUsuarioCrearNuevoFragment"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/fechaTextViewCrearNuevo"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/botonFecha"
            android:id="@+id/fechaButtonCrearNuevo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/horaTextViewCrearNuevo"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/botonHora"
            android:id="@+id/horaButtonCrearNuevo"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondoAPP">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_margin="3dp"
                app:cardCornerRadius="20dp"
                android:visibility="invisible"
                android:id="@+id/usuarioCrearNuevoFragment">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:weightSum="3"
                    xmlns:android="http://schemas.android.com/apk/res/android">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:text="1"
                        android:gravity="center"
                        android:id="@+id/idTextViewCrear"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.25"
                        android:layout_height="match_parent"
                        android:text="2"
                        android:gravity="center|center_vertical"
                        android:id="@+id/nombreTextViewCrear"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.25"
                        android:layout_height="match_parent"
                        android:text="3"
                        android:gravity="center"
                        android:id="@+id/fechaTextViewCrear"/>




                </LinearLayout>



            </android.support.v7.widget.CardView>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/crearButtonCrearNuevoFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:elevation="5dp"
            app:fabSize="normal"
            android:src="@drawable/crear"
            />
    </RelativeLayout>




</LinearLayout>